--- a/views/event_form.pug
+++ b/views/event_form.pug
@@ -39,7 +39,7 @@ block content
           required style='max-width: 60px;'
         )
 
-    button.btn.btn-primary(type='submit') Submit
+    button.w3-button.w3-blue.w3-hover-light-blue.w3-round-large(type='submit') Submit
 
 
   if errors
