--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -8,4 +8,4 @@ block content
             label(for="name") Game Name:
             input.w3-input.w3-input-form#name.form-control(type="text" name="name" required)
 
-        button.btn.btn-primary(type="submit") Create Game
+        button.w3-button.w3-blue.w3-hover-light-blue.w3-round-large(type="submit") Create Game
