--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -6,6 +6,6 @@ block content
     form(action="/home/games/create" method="post")
         div.form-group
             label(for="name") Game Name:
-            input.w3-input.w3-input-form#name.form-control(type="text" name="name" required)
+            input.w3-input.w3-input-form#name.form-control(type="text" name="name" required).w3-margin-bottom
 
         button.w3-button.w3-blue.w3-hover-light-blue.w3-round-large(type="submit") Create Game
