--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,94 +1,93 @@
 doctype html
 html(lang='en')
-  head
-    title= title
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    //link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css", integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N", crossorigin="anonymous")
-    //script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
-    //script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
-    link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
-    style.
-        body, h1, h2, h3, h4, h5, h6 {
-          font-family: "Montserrat", sans-serif
-        }
+    head
+        title= title
+        meta(charset='utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1')
+        //link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css", integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N", crossorigin="anonymous")
+        //script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
+        //script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
+        link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+        style.
+            body, h1, h2, h3, h4, h5, h6 {
+                font-family: "Montserrat", sans-serif
+            }
 
-        .footer {
-          background: linear-gradient(to right, #4f9afa, #651ae6); /* Gradient background */
-          color: white;
-          text-align: center;
-          padding: 10px 0;
-          border-top: 2px solid white; /* Add a border to the top */
-          position: relative;
-          width: 100%;
-        }
+            .footer {
+                background: linear-gradient(to right, #4f9afa, #651ae6); /* Gradient background */
+                color: white;
+                text-align: center;
+                padding: 10px 0;
+                border-top: 2px solid white; /* Add a border to the top */
+                position: relative;
+                width: 100%;
+            }
 
-        .footer a {
-          color: white;
-          text-decoration: none;
-          margin: 0 10px;
-        }
+            .footer a {
+                color: white;
+                text-decoration: none;
+                margin: 0 10px;
+            }
 
-        .footer a:hover {
-          text-decoration: underline;
-        }
+            .footer a:hover {
+                text-decoration: underline;
+            }
 
-        .w3-bar-block {
-          list-style-type: none; /* Removes the default bullet points */
-        }
+            .w3-bar-block {
+                list-style-type: none; /* Removes the default bullet points */
+            }
 
-        .w3-row-padding img {
-          margin-bottom: 12px
-        }
+            .w3-row-padding img {
+                margin-bottom: 12px
+            }
 
-        .w3-sidebar {
-          width: 120px;
-          background: #222;
-        }
-
-        #main {
-          margin-left: 120px;
-        }
-
-        @media only screen and (max-width: 600px) {
-          #main {
-            margin-top: 60px;
-            margin-left: 0;
-          }
-        }
-
-        .w3-bar {
-          display: flex;
-          justify-content: flex-end; /* Align items to the right */
-          background-color: #151519; /* Change background color to gray */
-          border: 2px solid #151519; /* Add a border around the entire header */
+            .w3-sidebar {
+                width: 120px;
+                background: #222;
+            }
 
 
-        }
+            @media only screen and (max-width: 600px) {
+                #main {
+                    margin-top: 60px;
+                    margin-left: 0;
+                }
+            }
 
-        .w3-bar .w3-bar-item {
-          margin-left: 10px; /* Add some space between items */
-        }
+            .w3-bar {
+                display: flex;
+                justify-content: flex-end; /* Align items to the right */
+                background-color: #151519; /* Change background color to gray */
+                border: 2px solid #151519; /* Add a border around the entire header */
 
-        .hero {
-          position: relative;
-          width: 100%;
-          height: calc(100vh - 60px); /* Full height minus header height */
-          background: url('/images/pexels-a-darmel-7862414.jpg') no-repeat center center/cover;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          color: white;
-          text-align: center;
-        }
 
-        .hero-text {
-          background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-          padding: 20px;
-          border-radius: 10px;
-        }
-    //link(rel='stylesheet', href='/stylesheets/style.css')
+            }
+
+            .w3-bar .w3-bar-item {
+                margin-left: 10px; /* Add some space between items */
+            }
+
+            .hero {
+                position: relative;
+                width: 100%;
+                height: calc(100vh - 120px); /* Full height minus header height */
+                background: url('/images/pexels-a-darmel-7862414.jpg') no-repeat center center/cover;
+                background-size: cover; /* Ensure the image covers the entire area */
+                background-position: center; /* Center the image */
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                text-align: center;
+            }
+
+            .hero-text {
+                background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+                padding: 20px;
+                border-radius: 10px;
+            }
+        //link(rel='stylesheet', href='/stylesheets/style.css')
 
 
 
@@ -96,25 +95,25 @@ html(lang='en')
 body(class='w3-black')
     // Top Navbar for Mobile (Hidden by default)
     header.w3-bar
-      a.w3-bar-item.w3-button(href='/home') Home
-      a.w3-bar-item.w3-button(href='/home/events') All events
-      a.w3-bar-item.w3-button(href='/home/games') All games
-      if user
-        a.w3-bar-item.w3-button(href='/home/event/create') Create new event
-        a.w3-bar-item.w3-button(href='/home/games/create') Create new game
-        a.w3-bar-item.w3-button(href='/user/profile') Profile
-        a.w3-bar-item.w3-button(href='/user/logout') Logout
-      else
-        a.w3-bar-item.w3-button(href='/user/login') Login
+        a.w3-bar-item.w3-button(href='/home') Home
+        a.w3-bar-item.w3-button(href='/home/events') All events
+        a.w3-bar-item.w3-button(href='/home/games') All games
+        if user
+            a.w3-bar-item.w3-button(href='/home/event/create') Create new event
+            a.w3-bar-item.w3-button(href='/home/games/create') Create new game
+            a.w3-bar-item.w3-button(href='/user/profile') Profile
+            a.w3-bar-item.w3-button(href='/user/logout') Logout
+        else
+            a.w3-bar-item.w3-button(href='/user/login') Login
 
     // Main Content
 
     div#main(class='w3-padding-large')
-      block content
+        block content
 
     footer(class='footer')
-      a(href='/privacy-policy') Privacy Policy
-      |  |
-      a(href='/terms-of-service') Terms of Use
-      |  |
-      span Copyright 2024
+        a(href='/privacy-policy') Privacy Policy
+        |  |
+        a(href='/terms-of-service') Terms of Use
+        |  |
+        span     Copyright 2024
