--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,6 +16,7 @@ html(lang='en')
                 padding: 0;
                 display: flex;
                 flex-direction: column;
+
             }
 
             #main-content {
@@ -30,8 +31,6 @@ html(lang='en')
                 border-top: 2px solid white; /* Add a border to the top */
                 position: relative;
                 width: 100%;
-                position: relative;
-                bottom: 0;
             }
 
             .footer a {
@@ -40,7 +39,7 @@ html(lang='en')
                 margin: 0 10px;
             }
 
-            .w3-hover-light-red-hover {
+            .w3-hover-light {
                 background-color: #ffcccc !important; /* Light red color */
             }
 
@@ -69,13 +68,15 @@ html(lang='en')
                 }
             }
 
-            .w3-bar {
-                display: flex;
-                justify-content: flex-end; /* Align items to the right */
+            header.w3-bar {
+                position: fixed;
+                top: 0;
+                width: 100%;
+                z-index: 1000; /* Ensure the header is above other content */
                 background-color: #151519; /* Change background color to gray */
                 border: 2px solid #151519; /* Add a border around the entire header */
-
-
+                display: flex;
+                justify-content: flex-end; /* Align items to the right */
             }
 
             .w3-bar .w3-bar-item {
