--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,6 +34,7 @@ html(lang='en')
                 padding: 10px 0;
                 border-top: 2px solid white; /* Add a border to the top */
                 position: relative;
+                bottom: 0;
                 width: 100%;
             }
 
