--- a/views/event_leave.pug
+++ b/views/event_leave.pug
@@ -1,14 +1,13 @@
 extends layout
 
 block content
-
   h1 #{title}: #{event.title}
 
+  p Do you really want to leave this event?
 
-    p Do you really want to leave this event?
+  form(method='POST')
+    div.form-group
+      input#eventid.form-control(type='hidden', name='eventid', value=event._id )
 
-    form(method='POST')
-      div.form-group
-        input#eventid.form-control(type='hidden', name='eventid', value=event._id )
+    button.w3-button.w3-red.w3-hover-pink.w3-round-large(type='submit', style='padding: 20px 40px; font-size: 18px;') LEAVE
 
-      button.btn.btn-primary(type='submit') JOIN
