--- a/views/event_list.pug
+++ b/views/event_list.pug
@@ -9,8 +9,8 @@ block content
   if event_list && event_list.length
     ul(style='list-style-type:none;')
       each event in event_list
-        li.w3-padding-16(style='font-size: 1.5rem;')
-          a(href=event.url, class='w3-text-blue w3-hover-text-light-blue') #{event.title}
+        li.w3-padding-16(style='font-size: 1.2rem;')
+          a(href=event.url, class='w3-text-blue w3-hover-text-light-blue', style='font-size: 1.5rem;' ) #{event.title}
           p Game: #{event.game.name}
           if event.status === 'Available'
             p.w3-text-green Available: #{event.participants.length} / #{event.max_size}
