--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,6 @@ html(lang='en')
 
             #main-content {
                 margin-top: 60px; /* Adjust this value based on the header height */
-
             }
 
             .footer {
@@ -32,9 +31,6 @@ html(lang='en')
                 color: white;
                 text-align: center;
                 padding: 10px 0;
-                border-top: 2px solid white; /* Add a border to the top */
-                position: relative;
-                bottom: 0;
                 width: 100%;
             }
 
@@ -107,6 +103,7 @@ html(lang='en')
                 padding: 20px;
                 border-radius: 10px;
             }
+        script(src='/javascripts/scripts.js')
         //link(rel='stylesheet', href='/stylesheets/style.css')
 
 
