--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   // Event Title Section
   div.w3-container.w3-padding-32.w3-center
-    h1.w3-xxlarge.w3-text-white Title: #{event.title}
+    h1.w3-xxlarge.w3-text-white #{event.title}
 
   // Game and Description Section
   div.w3-container.w3-padding-16
