--- a/views/event_form.pug
+++ b/views/event_form.pug
@@ -5,7 +5,7 @@ block content
   form(method='POST')
     div.form-group(style='display: flex; align-items: center;')
       label(for='title' style='margin-right: 10px;') Title:
-      input.w3-input.w3-input-form#title.form-control(type='text', placeholder='Name of event' name='title' required value=(undefined===event ? '' : event.title))
+      input.w3-input.w3-input-form#title.form-control(type='text' ,placeholder='Name of event' , name='title' required value=(undefined===event ? '' : event.title))
     div.form-group(style='display: flex; align-items: top;')
       label(for='description' style='margin-right: 10px;') Summary:
       textarea.w3-input#description.form-control(placeholder='description' name='description' required)= undefined===event ? '' : event.summary
