--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,21 +1,23 @@
 extends layout
 
 block content
-    h1= title
-    if user.profilePicture
-        img(src=`data:image/png;base64,${user.profilePicture.toString('base64')}`, alt='Profile Picture')
-    else
-        img(src='/images/default.png', alt='Default Profile Picture', width='150', height='150')
+    div(style='display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center; background-color: #1c1c1c; border-radius: 10px;')
+        if user.profilePicture
+            img(src=`data:image/png;base64,${user.profilePicture.toString('base64')}`, alt='Profile Picture', style='width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid white; margin-bottom: 20px;')
+        else
+            img(src='/images/default.png', alt='Default Profile Picture', style='width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid white; margin-bottom: 20px;')
 
-    if user
-        h2 Username: #{user.username}
-        h3 Email: #{user.email}
-        h3 Rating: #{user.rating}
-        h3 Events: #{numEvents}
-        ul(style='list-style-type:none;')
-            each event in user.events
-                li
-                    a(href=event.url) #{event.title}
-        a(href='/user/profile/edit') Edit Profile
-    else
-        p User not found.
+        if user
+            div(style='color: #f1f1f1;')
+                h2 Username: #{user.username}
+                h3 Email: #{user.email}
+                h3 Rating: #{user.rating}
+                h3 Events: #{numEvents}
+                ul(style='padding: 0; margin: 10px 0; list-style-type: none;')
+                    each event in user.events
+                        li(style='margin: 5px 0;')
+                            a(href=event.url, style='color: #4f9afa; text-decoration: none; font-weight: bold;') #{event.title}
+            button.w3-button.w3-blue.w3-hover-light-blue.w3-round-large(href='/user/profile/edit', style='margin-top: 20px;') Edit Profile
+        else
+            div(style='color: red; font-size: 1.2em;')
+                p User not found.
