hover kleuren gefixed

--- a/views/event_delete.pug
+++ b/views/event_delete.pug
@@ -11,4 +11,4 @@ block content
       div.form-group
         input#eventid.form-control(type='hidden', name='eventid', value=event._id )
 
-      button.btn.btn-primary(type='submit') Delete
+      button.w3-button.w3-red.w3-hover-pink.w3-round-large(type='submit') Delete
