--- a/views/logout.pug
+++ b/views/logout.pug
@@ -8,7 +8,7 @@ block content
             form(method='POST')
                 div.form-group
                     input#userid.form-control(type='hidden', name='userid', value="user")
-                button.btn.btn-primary(type='submit') Logout
+                button.w3-button.w3-red.w3-hover-pink.w3-round-large(type='submit') Logout
 
     style.
         .logout-container {
