--- a/views/login.pug
+++ b/views/login.pug
@@ -100,10 +100,10 @@ block content
                         label(for="password") Password:
                         input.w3-input(type="password" name="password" id="password" required)
                     .input-container
-                        button.w3-button.w3-blue(type="submit") Login
+                        button.w3-button.w3-blue.w3-hover-light-blue(type="submit") Login
 
                 .alternative
                     .input-container
-                        a.w3-button.w3-red(href="/user/auth/google") Sign in with Google
+                        a.w3-button.w3-red.w3-hover-pink(href="/user/auth/google") Sign in with Google
                     .input-container
-                        a.w3-button.w3-green(href='/user/register') Register here
+                        a.w3-button.w3-green.w3-hover-light-green(href='/user/register') Register here
