--- a/views/login.pug
+++ b/views/login.pug
@@ -5,6 +5,12 @@ block content
         title Login
     body
         style.
+            body {
+                display: flex;
+                flex-direction: column;
+                min-height: 100vh;
+                margin: 0;
+            }
 
             h1 {
                 color: black;
@@ -15,7 +21,7 @@ block content
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 80vh;
+                flex-grow: 1;
             }
 
             .login-form {
@@ -92,6 +98,9 @@ block content
             .login-form
 
                 h1 Login
+                if error
+                    .error-message(style="color: red; margin-bottom: 1rem;")
+                        p= error
                 form(action="/user/login" method="POST")
                     .input-container
                         label(for="username") Username:
