--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -44,6 +44,10 @@ block content
           div.w3-third.w3-padding-small
             div.w3-card.w3-white.w3-padding.w3-center
               span.w3-text-black #{val.username}
+              if event.organizer.equals(user._id) && !val._id.equals(user._id)
+                a(href=`/events/${event._id}/kick/${val._id}` class='kick-icon')
+                  i.fa.fa-times-circle(style='color: red; margin-left: 10px;')
+
     else
       p.w3-text-gray There are no users
     hr
