--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -45,9 +45,9 @@ block content
             div.w3-card.w3-white.w3-padding.w3-center
               span.w3-text-black #{val.username}
               if event.organizer.equals(user._id) && !val._id.equals(user._id)
-                a(href=`/events/${event._id}/kick/${val._id}` class='kick-icon')
-                  i.fa.fa-times-circle(style='color: red; margin-left: 10px;')
-
+                form(action=`/events/${event._id}/kick/${val._id}` method='POST' style='display: inline;')
+                  button(type='submit' class='kick-icon' style='background: none; border: none; cursor: pointer;')
+                    i.fa.fa-times-circle(style='color: red; margin-left: 10px;')
 
     else
       p.w3-text-gray There are no users
