--- a/views/login.pug
+++ b/views/login.pug
@@ -25,7 +25,7 @@ block content
             }
 
             .login-form {
-                background: dimgray;
+                background: #333;
                 padding: 2rem;
                 border-radius: 15px;
                 box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
