--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    div(style='display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center; background-color: #1c1c1c; border-radius: 10px;')
+    div(style='display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center; background-color: #333; border-radius: 10px;')
         if user.profilePicture
             img(src=`data:image/png;base64,${user.profilePicture.toString('base64')}`, alt='Profile Picture', style='width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid white; margin-bottom: 20px;')
         else
@@ -21,3 +21,4 @@ block content
         else
             div(style='color: red; font-size: 1.2em;')
                 p User not found.
+        //#1c1c1c
