--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,9 +4,6 @@ html(lang='en')
         title= title
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        //link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css", integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N", crossorigin="anonymous")
-        //script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
-        //script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
         link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
         style.
@@ -50,9 +47,6 @@ html(lang='en')
                 margin-right: 10px; /* Adjust the space here */
             }
 
-            .w3-hover-light {
-                background-color: #ffcccc !important; /* Light red color */
-            }
 
             .footer a:hover {
                 text-decoration: underline;
@@ -61,6 +55,7 @@ html(lang='en')
             .w3-bar-block {
                 list-style-type: none; /* Removes the default bullet points */
             }
+
 
             .w3-row-padding img {
                 margin-bottom: 12px
@@ -95,7 +90,11 @@ html(lang='en')
             .w3-bar .w3-bar-item {
                 margin-left: 10px; /* Add some space between items */
                 font-size: 2vh; /* Increase the font size */
+            }
 
+            .w3-bar .w3-bar-item:hover {
+                background-color: #333 !important;
+                color:white !important;
             }
 
             .hero {
