--- a/views/event_detail.pug
+++ b/views/event_detail.pug
@@ -45,13 +45,17 @@ block content
             div.w3-card.w3-white.w3-padding.w3-center
               span.w3-text-black #{val.username}
               if event.organizer.equals(user._id) && !val._id.equals(user._id)
-                form(action=`/events/${event._id}/kick/${val._id}` method='POST' style='display: inline;')
+                form(action=`${event.url}/kick/${val._id}` method='POST' style='display: inline;')
                   button(type='submit' class='kick-icon' style='background: none; border: none; cursor: pointer;')
                     i.fa.fa-times-circle(style='color: red; margin-left: 10px;')
 
     else
       p.w3-text-gray There are no users
     hr
+
+  if error
+    div.w3-container.w3-padding-16
+      h2.w3-large.w3-text-red #{error}
 
   // Organizer Actions
   if event.organizer.equals(user._id)
@@ -67,4 +71,6 @@ block content
         a.w3-button.w3-red.w3-hover-pink.w3-round-large(href=event.url + '/leave') Leave Event
     else if status_event === 'Available' && new Date(event.date) > new Date()
       div.w3-container.w3-padding-16
-        a.w3-button.w3-blue.w3-hover-light-blue.w3-round-large(href=event.url + '/join') Join Event
+        form(action=`${event.url}/join` method='POST' style='display: inline;')
+          button(type='submit' class='w3-button w3-blue w3-hover-light-blue w3-round-large' style='background: none; border: none; cursor: pointer;')
+            | Join Event
