--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,53 @@ html(lang='en')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+
         style.
+            #cookie-consent-popup {
+                display: none;
+                position: fixed;
+                z-index: 1000;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                overflow: auto;
+                background-color: rgba(0, 0, 0, 0.4);
+            }
+
+            #cookie-consent-popup .w3-modal-content {
+                margin: 10% auto;
+                border: 1px solid black;
+                width: 90%;
+                max-width: 500px;
+                background-color: gray;
+                color: white;
+                text-align: center; /* Center all text */
+
+            }
+
+            #cookie-consent-popup .w3-container {
+                color: white;
+                text-align: center; /* Center all text */
+
+            }
+
+
+            #cookie-consent-popup header {
+                background-color: gray; /* Custom background color */
+                padding: 10px;
+                text-align: center; /* Center all text */
+
+            }
+
+            #cookie-consent-popup footer {
+                background-color: gray; /* Custom background color */
+                padding: 10px;
+                text-align: center;
+                text-align: center; /* Center all text */
+
+            }
+
             body, h1, h2, h3, h4, h5, h6 {
                 font-family: 'Montserrat', sans-serif;
                 margin: 0;
@@ -147,3 +193,12 @@ body(class='w3-black body-container')
         a(href='/terms-of-service') Terms of Use
         |
         span     Copyright 2024
+
+    div#cookie-consent-popup.w3-modal
+        div.w3-modal-content.w3-animate-opacity.w3-card-4(style='max-width: 300px;')
+            header
+                h2 Cookie Consent
+            div.w3-container
+                p By visiting our site, you accept that we collect only the necessary cookies.
+            footer
+                button#accept-cookies.w3-button.w3-green.w3-round-large Accept
